# markdown-org-extract

./: .gitignore  .yamllint  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  clippy.toml  holidays_ru.json  org-mode-keywords.md
.github/: dependabot.yml
.github/actions/cargo-fetch-retry/: action.yml
.github/workflows/: ci.yml  outdated.yml  release.yml
docs/: CLOCK_IMPLEMENTATION.md
docs/adr/: 0001-standalone-cli-for-org-in-markdown.md  0002-supported-org-mode-subset.md  0003-clock-metadata-support.md  0004-tdd-mandatory.md  0005-no-community-meta-docs.md  0006-no-registry-duplicate-guard.md  0007-no-test-counts-in-readme.md  0008-rf-defaults.md  0009-unified-date-window-semantics.md  0010-rollback-policy.md  0011-release-commit-and-tag-format.md  0012-verify-org-semantics-against-upstream.md  0013-documentation-language.md  0014-active-and-inactive-timestamps.md  0015-json-schema-evolution.md  0016-rust-log-cli-precedence.md  0017-no-branch-protection-on-master.md  0018-warning-cookie-boundary.md  0019-input-encoding-expectations.md  0020-task-properties-org-properties-block.md  0021-accept-canceled-spelling.md  0022-amend-adrs-by-reference.md  README.md
examples/: clock-formats.md  clock-inline.md  clock-test.md  created-test.md  done-clock.md  meeting-notes.md  org-mode-timestamps.md  personal-notes.md  priorities.md  project-tasks.md  simple-clock.md  work-log.md  workdays-test.md
scripts/: audit.sh  check-changelog.sh  check.sh  install-hooks.sh  package-archive.sh  release-prep.sh  release-validate-tag.sh  release-verify-tag-body.sh  verify-archive.sh
src/: agenda.rs  cli.rs  clock.rs  error.rs  format.rs  holidays.rs  main.rs  parser.rs  regex_limits.rs  render.rs  timestamp.rs  types.rs
src/timestamp/: extract.rs  parser.rs  repeater.rs  weekdays.rs
tests/: cli.rs  dev_scripts.rs  release_check_changelog.rs  release_packaging.rs  signal_handling.rs
