[package]
name = "markdown-org-extract"
version = "0.10.0"
edition = "2021"
rust-version = "1.85"
authors = ["Vitaly Ostanin <vitaly.ostanin@gmail.com>"]
description = "CLI utility for extracting tasks from markdown files with Emacs Org-mode support"
license = "MIT"
repository = "https://github.com/VitalyOstanin/markdown-org-extract"
homepage = "https://github.com/VitalyOstanin/markdown-org-extract"
readme = "README.md"
keywords = ["markdown", "org-mode", "cli", "tasks", "agenda"]
categories = ["command-line-utilities", "text-processing"]
exclude = [
    "docs/",
    "TODO.md",
    "CHANGELOG.md",
    ".github/",
    "scripts/",
]

[dependencies]
aho-corasick = "1.1"
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
comrak = { version = "0.52", default-features = false }
regex = "1.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.44"
chrono-tz = "0.10"
grep-regex = "0.1.14"
grep-searcher = "0.1.14"
ignore = "0.4.25"
globset = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
signal-hook = "0.4.4"

[build-dependencies]
serde_json = "1.0.149"
chrono = { version = "0.4.44", default-features = false }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.27"

# Optimised release profile for a CLI binary: thin LTO + single codegen unit
# trims startup time and binary size at the cost of slightly slower builds.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
